@@ -198,6 +198,7 @@ MODx.panel.Static = function(config) {
         ,name: 'publishedon'
         ,id: 'modx-static-publishedon'
         ,allowBlank: true
+        ,dateFormat: MODx.config.manager_date_format
         ,dateWidth: 120
         ,timeWidth: 120
     });
@@ -208,7 +209,7 @@ MODx.panel.Static = function(config) {
             ,description: _('resource_publishdate_help')
             ,name: 'pub_date'
             ,id: 'modx-static-pub-date'
-            ,format: 'd-m-Y H:i:s'
+            ,dateFormat: MODx.config.manager_date_format
             ,allowBlank: true
             ,dateWidth: 120
             ,timeWidth: 120
@@ -221,7 +222,7 @@ MODx.panel.Static = function(config) {
             ,description: _('resource_unpublishdate_help')
             ,name: 'unpub_date'
             ,id: 'modx-static-unpub-date'
-            ,format: 'd-m-Y H:i:s'
+            ,dateFormat: MODx.config.manager_date_format
             ,allowBlank: true
             ,dateWidth: 120
             ,timeWidth: 120   
