@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-rc-1 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- [#MODX-1599] Added manager_date_format system setting for customizing date formats for the manager
 - [#MODX-1651] Increasing width of setup navbar buttons to accommodate translations
 - [#MODX-1649] Fixed bug where Quick Create didn't respect default_template setting
 - [#MODX-1650] Fixed bug with language specification in setup to properly set cookie for Windows machines, and set initial language properly
